<resources>
    <string name="app_name">Corredor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraçoes</string>
    <string name="action_editarperfil">Editar perfil</string>

    <string name="menu_relatorios">Relatorio turno</string>
    <string name="menu_meusrelatorios">Meus relatorios</string>
    <string name="menu_telateste">Tela de teste</string>
    <string name="menu_statusequipamentos">Status de equipamentos</string>
    <string name="menu_transporte">Transportes</string>
    <string name="menu_contracheque">Contracheques</string>
    <string name="menu_telefones">Telefones </string>
    <string name="menu_passagens">Passagens ferroviarias</string>
    <string name="menu_dss">Dss</string>
    <string name="menu_termos_de_uso">Termos de uso</string>
    <string name="menu_politicasDePrivacidades">Politicas privacidade</string>
    <string name="menu_Df">Df</string>
    <string name="menu_sobre">Sobre</string>

    <string name="menu_xx">ParaTeste</string>
    <string name="menu_paratest">Novo</string>
    <string name="menu_sair">Sair</string>

    <string name="facebook_app_id">1299380340447810</string>
    <string name="fb_login_protocol_scheme">fb1299380340447810</string>

    <string name="facebook_application_id" translatable="false">1299380340447810</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1299380340447810</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="Ativo">
        <item>TE</item>
        <item>RE</item>
        <item>PT</item>
    </string-array>


    <string-array name="Turma">
        <item>06as15</item>
        <item>15as00</item>
        <item>00as06</item>
    </string-array>


    <string-array name="Manuteçao">
        <item>Preventiva-D11</item>
        <item>Preventiva-PT</item>
        <item>Preventiva-RE</item>
        <item>Corretiva</item>
    </string-array>

    <string-array name="Status">
        <item>Parado</item>
        <item>Liberado</item>

    </string-array>

    <string-array name="Status_Manutencao">
        <item>Preventiva</item>
        <item>Corretiva</item>
    </string-array>
    <string name="title_activity_tela_de_menu_app_liberado">Tela_de_menu_app_liberado</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
